Freestyle: Lineset "Fill Range by selection" operator fails with python error #113255

Closed
opened 2023-10-04 20:02:12 +02:00 by Thomas Lachmann · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-03 18:30, hash: 2f3e3cda5103
Worked: 3.5.1

Short description of error
when using a Distance from Object or Distance from Camera modifier (either in color, alpha or distance) in a Freestyle Lineset the Fill Range by Selection buttons fails with this python error:

Python: Traceback (most recent call last):
  File "D:\Blender Foundation\blender-4.0.0-beta+v40.2f3e3cda5103-windows.amd64-release\4.0\scripts\startup\bl_operators\freestyle.py", line 51, in execute
    m = linestyle.color_modifiers.get[self.name]
TypeError: 'builtin_function_or_method' object is not subscriptable

Exact steps for others to reproduce the error
using the attached .blend file:

  • open the attached file
  • in the properties editor press Fill Range by Selection in one of the freestyle lineset modifiers

manual steps:

  • enable freestyle
  • in Viewlayer -> Freestyle alpha (or color/distance) add Distance from Camera modifier.
  • press Fill Range by Selection
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-03 18:30, hash: `2f3e3cda5103` Worked: 3.5.1 **Short description of error** when using a `Distance from Object` or `Distance from Camera` modifier (either in color, alpha or distance) in a Freestyle Lineset the `Fill Range by Selection` buttons fails with this python error: ``` Python: Traceback (most recent call last): File "D:\Blender Foundation\blender-4.0.0-beta+v40.2f3e3cda5103-windows.amd64-release\4.0\scripts\startup\bl_operators\freestyle.py", line 51, in execute m = linestyle.color_modifiers.get[self.name] TypeError: 'builtin_function_or_method' object is not subscriptable ``` **Exact steps for others to reproduce the error** using the attached .blend file: - open the attached file - in the properties editor press `Fill Range by Selection` in one of the freestyle lineset modifiers manual steps: - enable freestyle - in Viewlayer -> Freestyle alpha (or color/distance) add `Distance from Camera` modifier. - press `Fill Range by Selection`
Thomas Lachmann added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-04 20:02:13 +02:00

I can confirm the error message. However a different message appears to me:

Error: Python: Traceback (most recent call last):
  File "/Users/germanocavalcante/blender-git/build_vscode/Debug/bin/Blender.app/Contents/Resources/4.0/scripts/startup/bl_operators/freestyle.py", line 51, in execute
    m = linestyle.color_modifiers[self.name]
TypeError: bpy_prop_collection[key]: FreestyleLineStyle.color_modifiers does not support string lookups
I can confirm the error message. However a different message appears to me: ``` Error: Python: Traceback (most recent call last): File "/Users/germanocavalcante/blender-git/build_vscode/Debug/bin/Blender.app/Contents/Resources/4.0/scripts/startup/bl_operators/freestyle.py", line 51, in execute m = linestyle.color_modifiers[self.name] TypeError: bpy_prop_collection[key]: FreestyleLineStyle.color_modifiers does not support string lookups ```
Member

Checking on this

Checking on this
Philipp Oeser self-assigned this 2023-10-06 10:35:39 +02:00

Caused by 6a49041be3 .

@ideasman42

> Caused by 6a49041be3 . @ideasman42
Campbell Barton self-assigned this 2023-10-09 11:39:08 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-11 13:36:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113255
No description provided.